--- a/src/components/main-project/mainproject.module.css
+++ b/src/components/main-project/mainproject.module.css
@@ -1,9 +1,14 @@
 .project {
   /* padding: var(--padding); */
-  height: calc(100svh - 85px);
-  max-height: calc(100svh - 85px);
+  height: calc(100svh - 108px);
+  max-height: calc(100svh - 108px);
   overflow-y: auto;
   position: relative;
+  height: calc(100svh - 108px - (var(--padding) * 2));
+  max-height: calc(100svh - 108px - (var(--padding) * 2));
+  background-color: var(--txt-color);
+  margin: var(--padding);
+  border-radius: var(--radius);
 }
 .calendarsHolder {
   display: flex;
