--- a/src/pages/history/history.module.css
+++ b/src/pages/history/history.module.css
@@ -1,15 +1,20 @@
 .historyProcess {
-  height: calc(100svh - 85px);
-  max-height: calc(100svh - 85px);
+  height: calc(100svh - 108px);
+  max-height: calc(100svh - 108px);
   overflow-y: auto;
   position: relative;
+  height: calc(100svh - 108px - (var(--padding) * 2));
+  max-height: calc(100svh - 108px - (var(--padding) * 2));
+  background-color: var(--txt-color);
+  margin: var(--padding);
+  border-radius: var(--radius);
 }
-.process {
-  height: calc(100svh - 85px);
-  max-height: calc(100svh - 85px);
+/* .process {
+  height: calc(100svh - 108px);
+  max-height: calc(100svh - 108px);
   overflow-y: auto;
   position: relative;
-}
+} */
 .mainProcess {
   min-height: 100%;
   display: flex;
