--- a/src/pages/page.css
+++ b/src/pages/page.css
@@ -7,13 +7,13 @@
   scrollbar-width: none !important;
 }
 body {
-  background-color: var(--txt-color);
+  background-color: var(--soft-color);
   color: var(--bg-color);
   font-family: "Montserrat", sans-serif;
   font-family: "Epilogue", sans-serif;
 }
 ::selection {
-  background-color: var(--bg-color);
+  background-color: var(--soft-color);
   color: var(--txt-color);
 }
 :root {
@@ -22,11 +22,13 @@ body {
   --bg-color: #000;
   --main-color: #161616;
   --second-color: #333;
-  --soft-color: #ececec;
+  --soft-color: #f2f4f8;
   --txt-color: #fff;
   --style-color: #ff7900;
   --error-color: #e4002b;
   --padding: 20px;
+  --radius: 24px;
+  --header-size: 108px;
 }
 .light {
   --bg-color: #f9f9f9;
@@ -53,14 +55,14 @@ body {
   height: calc(100svh);
   overflow: hidden;
   max-height: calc(100svh);
-  background-color: var(--txt-color);
+  background-color: var(--soft-color);
   position: relative;
   z-index: 12;
   overflow: hidden;
 }
 .loggedin {
-  height: calc(100svh - 85px);
-  max-height: calc(100svh - 85px);
+  height: calc(100svh - 108px);
+  max-height: calc(100svh - 108px);
   display: grid;
   /* grid-template-columns: 1.4fr 3.5fr 2fr; */
   grid-template-columns: 1.6fr 6fr;
@@ -157,16 +159,18 @@ a {
   text-transform: uppercase;
 }
 .header {
-  background-color: black;
-  color: white;
+  background-color: var(--second-color);
+  color: var(--txt-color);
   padding: 15px var(--padding);
   position: sticky;
   top: 0;
   z-index: 9999;
-  height: 85px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: var(--padding);
+  margin-bottom: 0;
+  border-radius: var(--radius);
 }
 .header_ul .header_a {
   display: flex;
@@ -188,9 +192,12 @@ a {
 .header_logo {
   height: 100%;
   min-height: 100%;
-  width: 68px;
+  width: 58px;
   aspect-ratio: 1/1;
   position: relative;
+}
+.header_logo img {
+  border-radius: 4px;
 }
 .footer {
   min-height: 40svh;
