--- a/src/pages/page.css
+++ b/src/pages/page.css
@@ -13,7 +13,7 @@ body {
   font-family: "Epilogue", sans-serif;
 }
 ::selection {
-  background-color: var(--soft-color);
+  background-color: var(--main-color);
   color: var(--txt-color);
 }
 :root {
@@ -209,4 +209,52 @@ a {
 }
 .p-calendar .p-inputtext {
   padding: 10px 15px !important;
+}
+.imgContent {
+  width: 45px;
+  aspect-ratio: 1/1;
+  position: relative;
+}
+.imgContent img {
+  border-radius: 50%;
+  object-fit: cover;
+}
+.header_setting {
+  display: flex;
+  align-items: center;
+  gap: 14px;
+  padding-left: 14px;
+  border-left: 1px solid rgba(255, 255, 255, 0.2);
+}
+.header_info {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+.header_info h4 {
+  font-size: 16px;
+  text-transform: capitalize;
+}
+.header_info span {
+  color: rgba(255, 255, 255, 0.7);
+  font-weight: 400;
+  text-transform: capitalize;
+}
+.logoutBtn {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 8px;
+  border-radius: 4px;
+  outline: 0;
+  border: 0;
+  text-transform: capitalize;
+  font-weight: 600;
+  background-color: transparent;
+  color: var(--error-color);
+  cursor: pointer;
+  transition: 250ms ease-in-out;
+}
+.logoutBtn:hover {
+  background-color: #e4002b43;
 }
