--- a/src/components/dashboard/dashboard.module.css
+++ b/src/components/dashboard/dashboard.module.css
@@ -4,9 +4,18 @@
   max-height: calc(100svh - 108px - (var(--padding) * 2));
   background-color: var(--txt-color);
   margin: var(--padding);
-  border-radius: var(--radius);
+  /* border-radius: var(--radius); */
   overflow-y: auto;
   padding-bottom: var(--padding);
-  padding: var(--padding);
-  background-color: var(--txt-color);
+  /* padding: var(--padding); */
+  background-color: var(--soft-color);
+  display: flex;
+  flex-direction: column;
+  gap: var(--padding);
+}
+.chartHolder {
+  display: grid;
+  grid-template-columns: 1.2fr 1fr;
+  grid-template-rows: 350px;
+  gap: var(--padding);
 }
