--- a/src/pages/manage/manage.module.css
+++ b/src/pages/manage/manage.module.css
@@ -3,8 +3,71 @@
   position: relative;
   height: calc(100svh - 108px - (var(--padding) * 2));
   max-height: calc(100svh - 108px - (var(--padding) * 2));
-  background-color: var(--txt-color);
+  background-color: var(--soft-color);
   margin: var(--padding);
+}
+.boxHolder {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+  gap: var(--padding);
+}
+.box {
+  background-color: var(--txt-color);
   border-radius: var(--radius);
   padding: var(--padding);
+  display: flex;
+  flex-direction: column;
+  gap: var(--padding);
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+}
+.imgHolder {
+  width: 80px;
+  aspect-ratio: 1/1;
+  position: relative;
+  /* border: 2px solid #fca35580;
+  outline: 3px solid #ff790032; */
+  border-radius: 50%;
+}
+.imgHolder img {
+  object-fit: cover;
+  border-radius: inherit;
+}
+.boxHeader {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+}
+.boxHeader button {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  padding: 5px 6px;
+  border-radius: 8px;
+  border: 1px solid transparent;
+  outline: 0;
+  text-transform: capitalize;
+  font-weight: 500;
+  width: fit-content;
+  color: #237901;
+  background-color: #41e40020;
+}
+.boxBody {
+  background-color: var(--soft-color);
+  padding: var(--padding);
+  border-radius: var(--radius);
+}
+.boxFooter {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 8px;
+}
+.boxFooter button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  padding: 8px;
+  outline: 0;
+  font-weight: 500;
 }
