--- a/src/pages/manage/manage.module.css
+++ b/src/pages/manage/manage.module.css
@@ -3,11 +3,13 @@
   position: relative;
   height: calc(100svh - 108px - (var(--padding) * 2));
   max-height: calc(100svh - 108px - (var(--padding) * 2));
-  background-color: var(--soft-color);
+  background-color: var(--txt-color);
   margin: var(--padding);
   display: flex;
   flex-direction: column;
   gap: var(--padding);
+  border-radius: var(--radius);
+  padding: var(--padding);
 }
 .boxHolder {
   display: grid;
@@ -15,12 +17,13 @@
   gap: var(--padding);
 }
 .box {
-  background-color: var(--txt-color);
+  background-color: var(--soft-color);
   border-radius: var(--radius);
   padding: 10px;
   display: flex;
   flex-direction: column;
   gap: var(--padding);
+  gap: 10px;
   box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
 }
 .imgHolder {
@@ -56,9 +59,20 @@
   background-color: #41e40020;
 }
 .boxBody {
-  background-color: var(--soft-color);
+  background-color: var(--txt-color);
   padding: var(--padding);
-  border-radius: var(--radius);
+  border-radius: 8px;
+}
+.boxBody p {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 8px;
+  font-size: 14px;
+}
+.boxBody p svg {
+  font-size: 18px;
+  color: #666;
 }
 .boxFooter {
   display: grid;
@@ -73,4 +87,9 @@
   padding: 8px;
   outline: 0;
   font-weight: 500;
+}
+.addBtnHolder {
+  position: absolute;
+  top: var(--padding);
+  right: var(--padding);
 }
