--- a/src/pages/history/history.module.css
+++ b/src/pages/history/history.module.css
@@ -19,7 +19,7 @@
   min-height: 100%;
   display: flex;
   flex-direction: column;
-  gap: var(--padding);
+  /* gap: var(--padding); */
   position: relative;
   padding: var(--padding);
 }
@@ -49,6 +49,11 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: var(--padding);
+  position: sticky;
+  top: var(--padding);
+  z-index: 999;
+  background-color: var(--txt-color);
+  padding: var(--padding) 0;
 }
 .label {
   width: fit-content;
@@ -193,6 +198,7 @@
   height: 100%;
 }
 .tableFunctions {
+  padding: var(--padding) 0;
   display: flex;
   align-items: center;
   justify-content: flex-end;
