--- a/src/pages/page.css
+++ b/src/pages/page.css
@@ -284,3 +284,9 @@ a {
   color: #237901;
   background-color: #41e40020;
 }
+/* .p-datatable .p-datatable-thead > tr > th {bgcolor} */
+/* .p-datatable .p-datatable-tbody > tr{} */
+/* .p-datatable.p-datatable-striped .p-datatable-tbody > tr.p-row-odd{} */
+/* .p-paginator{} */
+/* .p-paginator .p-paginator-pages .p-paginator-page.p-highlight{} */
+/* .p-inputtext{} */
