--- a/src/components/dashboard/dashboard.module.css
+++ b/src/components/dashboard/dashboard.module.css
@@ -36,6 +36,10 @@
   border-radius: var(--radius);
   padding: var(--padding);
 }
+.dashBoxes .box.dark {
+  background-color: #333;
+  color: #fff;
+}
 .dashBoxes .box span {
   background-color: #ff790032;
   color: var(--style-color);
@@ -68,4 +72,7 @@
   font-family: "Montserrat", sans-serif;
   font-weight: 300;
   color: rgba(0, 0, 0, 0.8);
+}
+.dashBoxes .box.dark h2 {
+  color: rgba(255, 255, 255, 0.8);
 }
