--- a/src/components/main-process/mainprocess.module.css
+++ b/src/components/main-process/mainprocess.module.css
@@ -1,14 +1,8 @@
-/* .process {
-  height: calc(100svh - 108px);
-  max-height: calc(100svh - 108px);
-  overflow-y: auto;
-  position: relative;
-} */
 .mainProcess {
   min-height: 100%;
   display: flex;
   flex-direction: column;
-  gap: var(--padding);
+  /* gap: var(--padding); */
   position: relative;
   padding: var(--padding);
 }
@@ -38,6 +32,11 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: var(--padding);
+  position: sticky;
+  top: var(--padding);
+  z-index: 999;
+  background-color: var(--txt-color);
+  padding: var(--padding) 0;
 }
 .label {
   width: fit-content;
@@ -180,4 +179,7 @@
 }
 .projectHolderList {
   height: 100%;
+}
+.tableFunc {
+  padding: var(--padding) 0;
 }
