--- a/src/pages/process/process.module.css
+++ b/src/pages/process/process.module.css
@@ -1,3 +1,14 @@
+.addProcess,
 .process {
-  padding: var(--padding) 0;
+  padding: var(--padding);
+  position: relative;
+  height: calc(100svh - 108px - (var(--padding) * 2));
+  max-height: calc(100svh - 108px - (var(--padding) * 2));
+  background-color: var(--txt-color);
+  margin: var(--padding);
+  border-radius: var(--radius);
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  gap: var(--padding);
 }
