--- a/src/components/dashboard/dashboard.module.css
+++ b/src/components/dashboard/dashboard.module.css
@@ -32,13 +32,41 @@
   gap: var(--padding);
 }
 .dashBoxes .box {
-  background-color: #fff;
-  border-radius: var(--radius);
-  padding: var(--padding);
+  perspective: 1000px;
+  position: relative;
+  cursor: pointer;
 }
-.dashBoxes .box.dark {
+.dashBoxes .box .back_box,
+.dashBoxes .box .front_box {
+  background-color: #fff;
+  color: #333;
+}
+.dashBoxes .box.dark .back_box,
+.dashBoxes .box.dark .front_box {
   background-color: #333;
   color: #fff;
+}
+.inner_box {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transition: 500ms ease-in-out;
+  transform-style: preserve-3d;
+}
+.dashBoxes .box:hover .inner_box {
+  transform: rotateY(-180deg);
+}
+.back_box,
+.front_box {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  padding: var(--padding);
+  border-radius: var(--radius);
+}
+.back_box {
+  transform: rotateY(180deg);
 }
 .dashBoxes .box span {
   background-color: #ff790032;
